<resources>
    <string name="app_name">StudentsApp</string>
    <string name="title_home">Home</string>
    <string name="title_classes">Classes</string>
    <string name="Hello">Hello!</string>
    <string name="Classes_today">%1d classes today</string>
    <string name="time">8:30-9:30</string>
    <string name="history">History</string>
    <string name="days_left">%1d days left</string>
    <string name="description">Description</string>
    <string name="homework">Homework</string>
    <string name="today">Today %1</string>

    <string name="timer_msg">Are you ready for exams?</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>

    <string name="_09">09</string>
    <string name="divider">:</string>
    <string name="_23">23</string>
    <string name="_59">59</string>
</resources>