<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:background="@color/colorPrimaryBlack"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryBlack"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:id="@+id/text_hello"
            style="@style/HeaderTextViewWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_left_margin"
            android:layout_marginTop="@dimen/text_top_margin"
            android:text="@string/Hello"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/timer_card"
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/timer_height"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginStart="@dimen/text_left_margin"
            android:layout_marginEnd="@dimen/text_left_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_hello">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_last"
                    style="@style/HeaderTextViewWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timer_msg"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_days_last"
                    style="@style/TextViewWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/days"
                    app:layout_constraintStart_toStartOf="@id/days"
                    app:layout_constraintTop_toBottomOf="@id/days" />

                <TextView
                    android:id="@+id/tv_hour_last"
                    style="@style/TextViewWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/hours"
                    app:layout_constraintStart_toStartOf="@id/hours"
                    app:layout_constraintTop_toBottomOf="@id/hours" />

                <TextView
                    android:id="@+id/tv_hour_minutes"
                    style="@style/TextViewWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/minutes"
                    app:layout_constraintStart_toStartOf="@id/minutes"
                    app:layout_constraintTop_toBottomOf="@id/minutes" />

                <TextView
                    android:id="@+id/days"
                    style="@style/LargeTextViewWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium"
                    android:text="@string/_09"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/dots1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dots1"
                    style="@style/LargeTextViewWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/divider"
                    app:layout_constraintBottom_toBottomOf="@+id/days"
                    app:layout_constraintEnd_toStartOf="@+id/hours"
                    app:layout_constraintStart_toEndOf="@+id/days"
                    app:layout_constraintTop_toTopOf="@+id/days" />

                <TextView
                    android:id="@+id/hours"
                    style="@style/LargeTextViewWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_23"
                    app:layout_constraintBottom_toBottomOf="@+id/dots1"
                    app:layout_constraintEnd_toStartOf="@+id/dots2"
                    app:layout_constraintStart_toEndOf="@+id/dots1"
                    app:layout_constraintTop_toTopOf="@+id/dots1" />

                <TextView
                    android:id="@+id/dots2"
                    style="@style/LargeTextViewWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/divider"
                    app:layout_constraintBottom_toBottomOf="@+id/hours"
                    app:layout_constraintEnd_toStartOf="@+id/minutes"
                    app:layout_constraintStart_toEndOf="@+id/hours"
                    app:layout_constraintTop_toTopOf="@+id/hours" />

                <TextView
                    android:id="@+id/minutes"
                    style="@style/LargeTextViewWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/medium"
                    android:text="@string/_59"
                    app:layout_constraintBottom_toBottomOf="@+id/dots2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/dots2"
                    app:layout_constraintTop_toTopOf="@+id/dots2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textview_classes"
            style="@style/SecondaryHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_left_margin"
            android:layout_marginTop="@dimen/text_top_margin"
            android:text="@string/title_classes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timer_card" />

        <TextView
            android:id="@+id/textview_lessons_count"
            style="@style/SecondaryHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_top_margin"
            android:layout_marginEnd="@dimen/text_left_margin"
            android:text="@string/Classes_today"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timer_card" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/classes_recyclerview"
            android:layout_width="0dp"
            android:layout_height="@dimen/classes_rv_height"
            android:layout_marginEnd="@dimen/text_left_margin"
            android:orientation="horizontal"
            android:paddingStart="@dimen/item_left_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_classes"
            tools:listitem="@layout/item_classes" />

        <TextView
            android:id="@+id/textview_homework"
            style="@style/SecondaryHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_left_margin"
            android:layout_marginTop="@dimen/text_top_margin"
            android:text="@string/homework"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/classes_recyclerview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homework_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/homework_height"
            android:layout_marginStart="@dimen/item_left_padding"
            android:layout_marginTop="@dimen/text_top_margin"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_homework"
            android:layout_marginBottom="@dimen/margin60"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_homework" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>