<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/home_card_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/text_left_margin"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardBackgroundColor="@color/colorSecondaryBlack">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/homework_class_name_text"
            style="@style/SecondaryHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_left_margin"
            android:layout_marginTop="@dimen/text_top_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tool:text="@string/history" />

        <TextView
            android:id="@+id/time_left_text"
            style="@style/OrdinaryTextView"
            android:textColor="@color/dark_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_left_margin"
            android:layout_marginTop="@dimen/text_small_top_margin"
            app:layout_constraintTop_toBottomOf="@id/homework_class_name_text"
            app:layout_constraintStart_toStartOf="parent"
            tool:text="@string/days_left" />

        <TextView
            android:id="@+id/description_text"
            style="@style/OrdinaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_left_margin"
            android:layout_marginTop="@dimen/text_small_top_margin"
            android:layout_marginBottom="@dimen/text_small_top_margin"
            app:layout_constraintTop_toBottomOf="@id/time_left_text"
            app:layout_constraintStart_toStartOf="parent"
            tool:text="@string/description" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/homework_iv"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginBottom="@dimen/medium"
            app:civ_border_width="1dp"
            app:civ_border_color="#FF000000"
            app:layout_constraintBottom_toTopOf="@id/description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/image_margin_start"
            app:layout_constraintStart_toEndOf="@id/description_text"
            android:layout_marginEnd="@dimen/text_left_margin"
            tool:src="@drawable/homework"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>